--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
+    volumes:
+      # Update this to wherever you want VS Code to mount the folder of your project
+      - .:/workspace:cached
     command: roscore
 
